--- a/ii_projects/2-)emaartech-building/style.css
+++ b/ii_projects/2-)emaartech-building/style.css
@@ -1,3 +1,4 @@
+/* Hero */
 .w-100-height {
   width: 100%;
   height: 90vh;
@@ -27,4 +28,52 @@
     .carousel-control-next-icon
   ) {
   z-index: 100 !important;
+}
+
+.carousel-caption {
+  margin-bottom: 200px;
+  text-align: left;
+}
+.carousel-caption h5 {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+/* Companies */
+#companies {
+  background-color: #212529;
+  color: #b5b5b5;
+  margin-top: -150px;
+}
+
+#ceo-row {
+  margin-top: 25%;
+}
+
+/* Services */
+.text-container {
+  margin-top: 80px;
+}
+
+.service-container {
+  margin-bottom: 100px;
+}
+
+/* Blog */
+.card-image {
+  width: 100%;
+  height: 250px !important;
+  object-fit: cover;
+}
+
+@media (max-width: 1100px) {
+  .companie-logo {
+    max-width: 200px !important;
+  }
+}
+
+@media (max-width: 576px) {
+  .companie-logo {
+    max-width: 300px !important;
+  }
 }
